name updates and README

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sub-hub-header-footer",
+  "name": "sponline-header-footer",
   "version": "0.0.1",
   "private": true,
   "engines": {
